# fasteval3

./: CHANGELOG.md  Cargo.toml  README.md
benches/: bench.rs.tmpl
examples/: advanced-vars.rs  compile.rs  ez.rs  internals.rs  ns_btreemap_str.rs  ns_btreemap_string.rs  ns_cachedcallbacknamespace.rs  ns_callback.rs  ns_emptynamespace.rs  ns_vec_btreemap_string.rs  repl.rs  simple-vars.rs  slab.rs  unsafe-vars.rs
src/: compiler.rs  error.rs  evaler.rs  evalns.rs  ez.rs  lib.rs  parser.rs  slab.rs  util.rs
tests/: common.rs  compile.rs  eval.rs  evalns.rs  ez.rs  from_3rd.rs  from_go.rs  parse.rs
