[package]
name = "fasteval2"
version = "2.0.3"
authors = ["Pasha Podolsky <ppodolsky@me.com>", "Christopher Sebastian <christopher@likebike.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/izihawa/fasteval2"
documentation = "https://docs.rs/fasteval2/"
description = """Fast evaluation of algebraic expressions"""
keywords = ["evaluate", "math", "algebra", "calculate", "expression"]
categories = ["mathematics", "science", "parser-implementations"]
edition = "2021"

[dependencies]

[profile.bench]
debug = true
lto = true

[features]
default = ["alpha-keywords"]
alpha-keywords = []  # Enable 'NaN', 'inf', 'and', 'or'
unsafe-vars = []     # tinyexpr-style pointer-based variables.
nightly = []         # Enable features that depend on Rust nightly.

