[package]
name = "fasteval3"
version = "3.0.0"
authors = ["Pasha Podolsky <ppodolsky@me.com>", "Christopher Sebastian <christopher@likebike.com>", "Overzealous Lotus"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/OverzealousLotus/fasteval3"
documentation = "https://docs.rs/fasteval3/"
description = """Fast evaluation of algebraic expressions"""
keywords = ["evaluate", "math", "algebra", "calculate", "expression"]
categories = ["mathematics", "science", "parser-implementations"]
edition = "2021"

[dependencies]

[profile.bench]
debug = true
lto = true

[features]
default = ["alpha-keywords"]
alpha-keywords = []  # Enable 'NaN', 'inf', 'and', 'or'
unsafe-vars = []     # tinyexpr-style pointer-based variables.
nightly = []         # Enable features that depend on Rust nightly.

[lints.rust]
single_use_lifetimes = "warn"
unreachable_pub = "warn"

[lints.clippy]
str_to_string = "warn"
pedantic = "warn"
must_use_candidate = "allow" # Caused quite a few false-positives.
cast_precision_loss = "allow" # Unsure how to resolve. Help wanted.
cast_sign_loss = "allow" # Unsure how to resolve. Help wanted.
cast_possible_truncation = "allow" # Unsure how to resolve. Help wanted.
nursery = "warn"